feat(expenses): implement expense deletion and create expense screen
- Added `useDeleteExpense` hook for handling expense deletion.
- Updated `ExpensesList` component to include delete functionality with user feedback.
- Created `CreateExpenseScreen` for adding new expenses with pre-filled data.
- Enhanced expense form validation and error handling.
- Improved localization for expense-related messages.
- Refactored expense-related hooks and schemas for better organization and clarity.
- Updated image upload functionality to support new response structure.

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -179,6 +179,37 @@
   "services": "Services",
   "settings": "Settings",
 
+  "expense": "Expense",
+  "myExpenses": "My Expenses",
+  "newExpense": "New Expense",
+  "expenseDetails": "Expense Details",
+  "noExpensesTitle": "No expenses found",
+  "noExpensesSubtitle": "You haven't added any expenses yet.",
+  "editExpense": "Edit Expense",
+  "createExpense": "Create Expense",
+  "expenseCreatedSuccessfully": "Expense created successfully",
+  "expenseUpdatedSuccessfully": "Expense updated successfully",
+  "invalidExpenseId": "Invalid expense ID",
+  "expenseNotFound": "Expense not found",
+  "scanReceipt": "Scan Receipt",
+  "noReceiptImageSelected": "No receipt image selected",
+  "imageRemoved": "Image removed",
+  "imageRemovalFailed": "Failed to remove image",
+  "processingReceiptImage": "Processing receipt image...",
+  "uploadingImage": "Uploading image...",
+  "extractingReceiptValues": "Extracting receipt values...",
+  "imageUploaded": "Image uploaded",
+  "errorUploadingImage": "Error uploading image",
+  "errorGettingReceiptValues": "Error getting receipt values",
+  "compressingPicture": "Compressing picture...",
+  "unknownError": "Unknown error, please try again",
+  "creating": "Creating...",
+  "merchant": "Merchant",
+  "category": "Category",
+  "subcategory": "Subcategory",
+  "selectACategory": "Select a category",
+  "selectASubcategory": "Select a subcategory",
+
   "ShortMonthJan": "Jan",
   "ShortMonthFeb": "Feb",
   "ShortMonthMar": "Mar",
@@ -382,5 +413,8 @@
   "enterPostalCode": "Enter postal code",
   "enterCountry": "Enter country",
   "soleProprietor": "Sole Proprietor",
-  "soleProprietorAutoCreate": "You don't have a company. Once the first invoice is issued, a 'Sole Proprietor' company will be automatically created with your profile data. You can always edit it later in Company Settings."
+  "soleProprietorAutoCreate": "You don't have a company. Once the first invoice is issued, a 'Sole Proprietor' company will be automatically created with your profile data. You can always edit it later in Company Settings.",
+
+  "receiptImage": "Receipt Image",
+  "receiptScannedSuccessfully": "Receipt scanned successfully"
 }
