--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -144,29 +144,19 @@
   "confirm": "Confirmar",
   "name": "Nombre",
   "status": "Estado",
-  "date": "Fecha",
   "amount": "Cantidad",
-  "total": "Total",
   "type": "Tipo",
   "user": "Usuario",
   "comingSoon": "Próximamente",
   "stayTuned": "¡Mantente atento para más actualizaciones!",
-  "create": "Crear",
-  "update": "Actualizar",
   "saving": "Guardando...",
-  "updating": "Actualizando...",
   "phone": "Teléfono",
   "address": "Dirección",
   "unknownErrorOccurred": "Ocurrió un error desconocido. Por favor, inténtalo de nuevo.",
   "image": "Imagen",
   "areYouSure": "¿Estás absolutamente seguro?",
   "thisActionCannotBeUndone": "Esta acción no se puede deshacer.",
-  "deleteSuccess": "Eliminado con éxito.",
   "updateSuccess": "Actualizado con éxito.",
-  "canNotDelete": "No se puede eliminar este elemento.",
-  "goBack": "Regresar",
-  "retry": "Reintentar",
-  "loadError": "Error al cargar los datos. Por favor, inténtalo de nuevo.",
   "resourceNotFound": "Recurso no encontrado.",
 
   "dashboard": "Tablero",
@@ -175,6 +165,48 @@
   "appointments": "Citas",
   "services": "Servicios",
   "settings": "Configuraciones",
+
+  "expense": "Gasto",
+  "myExpenses": "Mis gastos",
+  "newExpense": "Nuevo gasto",
+  "expenseDetails": "Detalles del gasto",
+  "noExpensesTitle": "No se encontraron gastos",
+  "noExpensesSubtitle": "Aún no has agregado ningún gasto.",
+  "editExpense": "Editar gasto",
+  "createExpense": "Agregar gasto",
+  "expenseCreatedSuccessfully": "Gasto creado con éxito",
+  "expenseUpdatedSuccessfully": "Gasto actualizado con éxito",
+  "invalidExpenseId": "ID de gasto inválido",
+  "expenseNotFound": "Gasto no encontrado",
+  "scanReceipt": "Escanear recibo",
+  "noReceiptImageSelected": "No se ha seleccionado imagen de recibo",
+  "imageRemoved": "Imagen eliminada",
+  "imageRemovalFailed": "Error al eliminar la imagen",
+  "processingReceiptImage": "Procesando imagen del recibo...",
+  "uploadingImage": "Subiendo imagen...",
+  "extractingReceiptValues": "Extrayendo valores del recibo...",
+  "imageUploaded": "Imagen subida",
+  "errorUploadingImage": "Error al subir la imagen",
+  "errorGettingReceiptValues": "Error al obtener los valores del recibo",
+  "compressingPicture": "Comprimiendo imagen...",
+  "unknownError": "Error desconocido, por favor intenta de nuevo",
+  "creating": "Creando...",
+  "updating": "Actualizando...",
+  "create": "Crear",
+  "update": "Actualizar",
+  "merchant": "Comerciante",
+  "total": "Total",
+  "date": "Fecha",
+  "notes": "Notas",
+  "category": "Categoría",
+  "subcategory": "Subcategoría",
+  "selectACategory": "Selecciona una categoría",
+  "selectASubcategory": "Selecciona una subcategoría",
+  "loadError": "Error al cargar datos",
+  "canNotDelete": "No se puede eliminar",
+  "deleteSuccess": "Eliminado con éxito",
+  "retry": "Reintentar",
+  "goBack": "Regresar",
 
   "ShortMonthJan": "Ene",
   "ShortMonthFeb": "Feb",
@@ -287,7 +319,6 @@
   "description": "Descripción",
   "quantity": "Cantidad",
   "price": "Precio",
-  "notes": "Notas",
 
   "dashboardMetrics": "Métricas del tablero",
   "totalUsers": "Total de usuarios",
@@ -379,5 +410,8 @@
   "enterPostalCode": "Ingrese código postal",
   "enterCountry": "Ingrese país",
   "soleProprietor": "Empresa Unipersonal",
-  "soleProprietorAutoCreate": "No tienes una empresa. Una vez emitida la primera factura, se creará automáticamente una empresa 'Empresario Individual' con los datos de tu perfil. Siempre podrás editarla después en Configuración de Empresa."
+  "soleProprietorAutoCreate": "No tienes una empresa. Una vez emitida la primera factura, se creará automáticamente una empresa 'Empresario Individual' con los datos de tu perfil. Siempre podrás editarla después en Configuración de Empresa.",
+
+  "receiptImage": "Imagen del recibo",
+  "receiptScannedSuccessfully": "Recibo escaneado exitosamente"
 }
