feat: enhance appointment and service screens with internationalization support

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -416,5 +416,74 @@
   "soleProprietorAutoCreate": "You don't have a company. Once the first invoice is issued, a 'Sole Proprietor' company will be automatically created with your profile data. You can always edit it later in Company Settings.",
 
   "receiptImage": "Receipt Image",
-  "receiptScannedSuccessfully": "Receipt scanned successfully"
+  "receiptScannedSuccessfully": "Receipt scanned successfully",
+
+  "service": "Service",
+  "serviceDetails": "Service Details",
+  "noServicesTitle": "No services available",
+  "noServicesSubtitle": "Please check back later.",
+  "serviceNotFound": "Service not found",
+  "serviceNotFoundDescription": "The service you're looking for doesn't exist.",
+  "bookNow": "Book Now",
+  "currentlyUnavailable": "Currently Unavailable",
+  "serviceDescription": "Description",
+  "availableStaff": "Available Staff",
+  "available": "Available",
+  "unavailable": "Unavailable",
+  "serviceAvailability": "Service Availability",
+  "onlineService": "Online Service",
+  "availableRemotely": "Available remotely",
+  "notAvailableOnline": "Not available online",
+  "inPersonService": "In-Person Service",
+  "visitOurOffice": "Visit our office",
+  "alsoAvailableInPerson": "Also available in-person",
+  "goodMorning": "Good morning",
+  "goodAfternoon": "Good afternoon",
+  "goodEvening": "Good evening",
+  "searchServices": "Search services...",
+
+  "appointment": "Appointment",
+  "myAppointments": "My Appointments",
+  "newAppointment": "New Appointment",
+  "bookAppointment": "Book Appointment",
+  "appointmentDetails": "Appointment Details",
+  "noAppointments": "No Appointments",
+  "noAppointmentsDescription": "You don't have any upcoming appointments. Book one now!",
+  "viewHistory": "View History",
+  "noPastAppointments": "No Past Appointments",
+  "noPastAppointmentsDescription": "Your appointment history will appear here.",
+  "appointmentCancelled": "Appointment Cancelled",
+  "appointmentCancelledDescription": "Your appointment has been cancelled successfully.",
+  "cancelAppointment": "Cancel Appointment",
+  "cancelReason": "Cancellation Reason",
+  "confirmCancel": "Confirm Cancellation",
+  "selectService": "Select Service",
+  "selectDateTime": "Select Date & Time",
+  "selectStaff": "Select Staff",
+  "additionalDetails": "Additional Details",
+  "confirmBooking": "Confirm Booking",
+  "appointmentConfirmed": "Appointment Confirmed",
+  "appointmentConfirmedDescription": "Your appointment has been confirmed successfully.",
+  "selectionSaved": "Selection saved",
+  "detailsSaved": "Details saved",
+  "appointmentNotes": "Notes",
+  "appointmentNotesPlaceholder": "Any additional information...",
+  "preferredStaff": "Preferred Staff",
+  "anyStaff": "Any Available Staff",
+  "scheduledFor": "Scheduled For",
+  "bookedBy": "Booked By",
+  "appointmentWith": "Appointment with",
+  "appointmentStatus": "Status",
+  "statusPending": "Pending",
+  "statusConfirmed": "Confirmed",
+  "statusCompleted": "Completed",
+  "statusCancelled": "Cancelled",
+  "statusNoShow": "No Show",
+  "errorLoadingAppointment": "Error loading appointment",
+  "errorCreatingAppointment": "Error creating appointment",
+  "errorCancellingAppointment": "Failed to cancel appointment",
+  "pleaseSignInToBook": "Please, sign in",
+  "pleaseSignInDescription": "You must be authenticated to book a service.",
+  "tryAdjustingSearch": "Try adjusting your search",
+  "preferenceSaved": "Preference saved"
 }
