--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -413,5 +413,74 @@
   "soleProprietorAutoCreate": "No tienes una empresa. Una vez emitida la primera factura, se creará automáticamente una empresa 'Empresario Individual' con los datos de tu perfil. Siempre podrás editarla después en Configuración de Empresa.",
 
   "receiptImage": "Imagen del recibo",
-  "receiptScannedSuccessfully": "Recibo escaneado exitosamente"
+  "receiptScannedSuccessfully": "Recibo escaneado exitosamente",
+
+  "service": "Servicio",
+  "serviceDetails": "Detalles del servicio",
+  "noServicesTitle": "No hay servicios disponibles",
+  "noServicesSubtitle": "Por favor, vuelve más tarde.",
+  "serviceNotFound": "Servicio no encontrado",
+  "serviceNotFoundDescription": "El servicio que buscas no existe.",
+  "bookNow": "Reservar ahora",
+  "currentlyUnavailable": "No disponible actualmente",
+  "serviceDescription": "Descripción",
+  "availableStaff": "Personal disponible",
+  "available": "Disponible",
+  "unavailable": "No disponible",
+  "serviceAvailability": "Disponibilidad del servicio",
+  "onlineService": "Servicio en línea",
+  "availableRemotely": "Disponible de forma remota",
+  "notAvailableOnline": "No disponible en línea",
+  "inPersonService": "Servicio presencial",
+  "visitOurOffice": "Visita nuestra oficina",
+  "alsoAvailableInPerson": "También disponible presencial",
+  "goodMorning": "Buenos días",
+  "goodAfternoon": "Buenas tardes",
+  "goodEvening": "Buenas noches",
+  "searchServices": "Buscar servicios...",
+
+  "appointment": "Cita",
+  "myAppointments": "Mis citas",
+  "newAppointment": "Nueva cita",
+  "bookAppointment": "Reservar cita",
+  "appointmentDetails": "Detalles de la cita",
+  "noAppointments": "Sin citas",
+  "noAppointmentsDescription": "No tienes citas próximas. ¡Reserva una ahora!",
+  "viewHistory": "Ver historial",
+  "noPastAppointments": "Sin citas pasadas",
+  "noPastAppointmentsDescription": "Tu historial de citas aparecerá aquí.",
+  "appointmentCancelled": "Cita cancelada",
+  "appointmentCancelledDescription": "Tu cita ha sido cancelada con éxito.",
+  "cancelAppointment": "Cancelar cita",
+  "cancelReason": "Motivo de cancelación",
+  "confirmCancel": "Confirmar cancelación",
+  "selectService": "Seleccionar servicio",
+  "selectDateTime": "Seleccionar fecha y hora",
+  "selectStaff": "Seleccionar personal",
+  "additionalDetails": "Detalles adicionales",
+  "confirmBooking": "Confirmar reserva",
+  "appointmentConfirmed": "Cita confirmada",
+  "appointmentConfirmedDescription": "Tu cita ha sido confirmada con éxito.",
+  "selectionSaved": "Selección guardada",
+  "detailsSaved": "Detalles guardados",
+  "appointmentNotes": "Notas",
+  "appointmentNotesPlaceholder": "Cualquier información adicional...",
+  "preferredStaff": "Personal preferido",
+  "anyStaff": "Cualquier personal disponible",
+  "scheduledFor": "Programada para",
+  "bookedBy": "Reservada por",
+  "appointmentWith": "Cita con",
+  "appointmentStatus": "Estado",
+  "statusPending": "Pendiente",
+  "statusConfirmed": "Confirmada",
+  "statusCompleted": "Completada",
+  "statusCancelled": "Cancelada",
+  "statusNoShow": "No se presentó",
+  "errorLoadingAppointment": "Error al cargar la cita",
+  "errorCreatingAppointment": "Error al crear la cita",
+  "errorCancellingAppointment": "Error al cancelar la cita",
+  "pleaseSignInToBook": "Por favor, inicia sesión",
+  "pleaseSignInDescription": "Debes autenticarte para reservar un servicio.",
+  "tryAdjustingSearch": "Intenta ajustar tu búsqueda",
+  "preferenceSaved": "Preferencias guardadas"
 }
