--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -61,7 +61,7 @@
   "alreadyHaveAccount": "¿Ya tienes una cuenta?",
   "signUpWithMeta": "Registrarse con Meta",
   "signUpSuccess": "¡Cuenta creada con éxito! Por favor, revisa tu correo electrónico para verificar tu cuenta.",
-  "signInScreenTitle": "Bienvenido de nuevo",
+  "signInScreenTitle": "Inicia sesión en tu cuenta",
   "signInScreenSubtitle": "Inicia sesión para acceder a tu cuenta",
   "forgotPassword": "¿Olvidaste tu contraseña?",
   "dontHaveAccount": "¿No tienes una cuenta?",
@@ -70,9 +70,11 @@
   "signInWithApple": "Iniciar sesión con Apple",
   "signInWithGoogle": "Iniciar sesión con Google",
   "signInWithMeta": "Iniciar sesión con Meta",
-  "signInSuccess": "¡Bienvenido de nuevo!",
+  "signInSuccess": "¡Inicio de sesión exitoso!",
   "signInSuccessDescription": "Has iniciado sesión correctamente en tu cuenta.",
   "signOutSuccess": "Cierre de sesión exitoso.",
+  "continueWithGoogle": "Continuar con Google",
+  "googleSignInError": "Error al iniciar sesión con Google. Por favor, intenta de nuevo.",
   "selectYourCountry": "Selecciona tu país",
   "bySigningUpYouAgreeToOur": "Al hacer clic en continuar, aceptas nuestros",
 
