Refactor expenses management: consolidate hooks, remove unused code, and enhance expense actions
- Merged delete and create expense hooks into a single mutation for better management.
- Removed deprecated hooks and schemas related to expense creation and deletion.
- Updated expenses list component to utilize new mutation structure.
- Introduced new actions for creating, updating, and deleting expenses.
- Simplified expense retrieval logic and adjusted related queries.
- Added a new services screen to enhance user navigation and information access.
- Updated translations for improved clarity and consistency.
- Cleaned up unused imports and components across the codebase.

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "startFreeTrial": "Start your free trial",
+  "startFreeTrial": "FREE TRIAL",
   "goToDashboard": "Go to Dashboard",
   "whyChooseUs": "Why Choose Us",
   "easyAppointment": "Easy Appointment",
@@ -13,7 +13,45 @@
   "learnMore": "Learn More",
   "features": "Features",
   "aboutUs": "About Us",
+  "aboutPageTitle": "About Ascencio Tax",
+  "aboutIntro": "At Ascencio Tax Inc. we handle the numbers so you can focus on growing your business. Our expert team provides high-quality income tax and business services for individuals and companies of all sizes.",
+  "aboutChatAudioTitle": "Secure Direct Audio Chat",
+  "aboutChatAudioDesc": "We offer a secure direct audio chat feature so you can connect with our experts in a confidential environment for quick questions or deeper consultations.",
+  "aboutPersonalizedTitle": "Personalized Services",
+  "aboutPersonalizedDesc": "Our team provides tailored solutions designed to meet your unique needs and help you reach your financial goals.",
+  "aboutWorkspaceTitle": "Customizable Workspace",
+  "aboutWorkspaceDesc": "Choose how you communicate with us — email, phone or secure audio chat — and work in the flow that suits you best.",
+  "aboutRealtimeTitle": "Real-time Sharing",
+  "aboutRealtimeDesc": "We enable real-time collaboration so you can safely and easily complete your taxes with guidance from our team.",
+  "servicesPageTitle": "Services",
+  "servicesIntro": "Let Ascencio Tax ease the burden and take care of the numbers for you. We provide expert income tax services to ensure your financial health.",
+  "servicesBusinessRegistrationsTitle": "Business Registrations",
+  "servicesBusinessRegistrationsDesc": "Sole proprietorships, partnerships, corporations, non-profit organizations and business number / GST & HST registrations.",
+  "servicesIncomeTaxTitle": "Income Tax Services",
+  "servicesIncomeTaxDesc": "We handle tax preparation and planning for individuals and businesses and stay up-to-date with tax laws to maximize deductions and compliance.",
+  "servicesWeService": "Individuals we service:",
+  "servicesClientsList": [
+    "New immigrants",
+    "Seniors and Canadian foreign pension",
+    "Social Assistance",
+    "Disability",
+    "Returns of deceased person",
+    "Contractors",
+    "Self-employed",
+    "Corporations",
+    "Rental income",
+    "Commission-based",
+    "Students"
+  ],
+  "servicesReportingTitle": "Reporting",
+  "servicesReportingDesc": "GST/HST, WSIB, Payroll and other government reporting services handled professionally.",
+  "servicesBenefitsTitle": "Benefit Assistance (CCB, OAS & CPP)",
+  "servicesBenefitsDesc": "Assistance with applications, documents and understanding benefits and pensions.",
+  "servicesCTA": "Contact Us Today",
   "contact": "Contact",
+  "contactPageTitle": "Contact Us",
+  "contactPageSubtitle": "We are here to help you with any question, comment or concern.",
+  "letsChat": "Let's Chat",
   "smsOnly": "SMS Only",
   "resources": "Resources",
   "blog": "Blog",
@@ -528,5 +566,15 @@
   "version": "Version",
   "logOut": "Log out",
   "account": "Account",
-  "termsOfUse": "Terms of Use"
+  "termsOfUse": "Terms of Use",
+  "panel": "Panel",
+  "scanning": "Scanning...",
+
+  "appStore": "App Store",
+  "googlePlay": "Google Play",
+  "playStore": "Play Store",
+  "availableOnThe": "Available on",
+  "getItOn": "Get it on",
+
+  "ourTeam": "Our Team"
 }
