--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -1,5 +1,5 @@
 {
-  "startFreeTrial": "Comienza tu prueba gratuita",
+  "startFreeTrial": "PRUEBA GRATIS",
   "goToDashboard": "Ir al panel de control",
   "whyChooseUs": "Por qué elegirnos",
   "easyAppointment": "Cita Fácil",
@@ -13,7 +13,45 @@
   "learnMore": "Aprende más",
   "features": "Características",
   "aboutUs": "Sobre nosotros",
+  "aboutPageTitle": "Sobre Ascencio Tax",
+  "aboutIntro": "En Ascencio Tax Inc. nos encargamos de los números para que usted pueda concentrarse en hacer crecer su negocio. Nuestro equipo de expertos brinda servicios comerciales y de impuestos sobre la renta de alta calidad para personas y empresas de todos los tamaños.",
+  "aboutChatAudioTitle": "Chat de audio directo seguro",
+  "aboutChatAudioDesc": "Ofrecemos un chat de audio directo seguro que le permite conectarse con nuestro equipo de expertos en un entorno confidencial, para consultas rápidas o más profundas.",
+  "aboutPersonalizedTitle": "Servicios personalizados",
+  "aboutPersonalizedDesc": "Nuestro equipo proporciona soluciones personalizadas que se adaptan a sus necesidades específicas y le ayudan a alcanzar sus objetivos financieros.",
+  "aboutWorkspaceTitle": "Espacio de trabajo personalizable",
+  "aboutWorkspaceDesc": "Prefiera comunicarse por correo electrónico, teléfono o chat de audio seguro: ofrecemos opciones para que trabaje como más le convenga.",
+  "aboutRealtimeTitle": "Compartir en tiempo real",
+  "aboutRealtimeDesc": "Facilitamos la colaboración en tiempo real para que pueda completar sus impuestos de manera segura y con la guía de nuestro equipo.",
+  "servicesPageTitle": "Servicios",
+  "servicesIntro": "En Ascencio Tax nos encargamos de los números para que usted pueda concentrarse en su negocio. Ofrecemos servicios expertos de impuestos y contabilidad para mantener su salud financiera.",
+  "servicesBusinessRegistrationsTitle": "Registro de Negocios",
+  "servicesBusinessRegistrationsDesc": "Propietarios únicos, sociedades, corporaciones, organizaciones sin fines de lucro y registro de número de negocio / GST & HST.",
+  "servicesIncomeTaxTitle": "Servicios de Impuesto Sobre la Renta",
+  "servicesIncomeTaxDesc": "Nos encargamos de la preparación y planificación fiscal para personas y empresas, manteniéndonos al día con las leyes fiscales para maximizar deducciones y cumplimiento.",
+  "servicesWeService": "Atendemos a:",
+  "servicesClientsList": [
+    "Nuevos inmigrantes",
+    "Personas mayores y pensión extranjera canadiense",
+    "Asistencia social",
+    "Discapacidad",
+    "Declaraciones de personas fallecidas",
+    "Contratistas",
+    "Trabajadores independientes",
+    "Corporaciones",
+    "Ingresos por alquiler",
+    "Comisionistas",
+    "Estudiantes"
+  ],
+  "servicesReportingTitle": "Reportes",
+  "servicesReportingDesc": "GST/HST, WSIB, Nómina y otros reportes gubernamentales gestionados profesionalmente.",
+  "servicesBenefitsTitle": "Asistencia de Beneficios (CCB, OAS & CPP)",
+  "servicesBenefitsDesc": "Asistencia con solicitudes, documentación y comprensión de beneficios y pensiones.",
+  "servicesCTA": "Contáctenos Hoy",
   "contact": "Contacto",
+  "contactPageTitle": "Contáctanos",
+  "contactPageSubtitle": "Estamos aquí para ayudarte con cualquier pregunta, comentario o inquietud.",
+  "letsChat": "Hablemos",
   "smsOnly": "Solo SMS",
   "resources": "Recursos",
   "blog": "Blog",
@@ -27,12 +65,12 @@
   "pleaseFixFormErrors": "Por favor, corrige los errores del formulario antes de guardar.",
   "validationInvalidFormat": "El formato de este campo no es válido.",
   "validationMinLength": "Este campo debe tener al menos {{min}} caracteres.",
-  "validationMaxLength": "Este campo debe tener como máximo {{max}} caracteres.",
+  "validationMaxLength": "Este campo debe tener como máximo {max} caracteres.",
   "validationEmail": "Por favor, introduce una dirección de correo electrónico válida.",
   "validationNumber": "Este campo debe ser un número válido.",
   "validationMinValue": "Este campo debe ser al menos {{min}}.",
   "validationMaxValue": "Este campo debe ser como máximo {{max}}.",
-  "validationMustMatch": "Este campo debe coincidir con {field}.",
+  "validationMustMatch": "Este campo debe coincidir con {{field}}.",
   "validationUrl": "Por favor, introduce una URL válida.",
   "validationUuid": "Por favor, introduce un identificador válido.",
   "validationIsoDatetime": "Por favor, introduce una fecha y hora válidas.",
@@ -525,5 +563,15 @@
   "version": "Versión",
   "logOut": "Cerrar sesión",
   "account": "Cuenta",
-  "termsOfUse": "Términos de uso"
+  "termsOfUse": "Términos de uso",
+  "panel": "Panel",
+  "scanning": "Escaneando...",
+
+  "appStore": "App Store",
+  "googlePlay": "Google Play",
+  "playStore": "Play Store",
+  "availableOnThe": "Disponible en",
+  "getItOn": "Consíguelo en",
+
+  "ourTeam": "Nuestro equipo"
 }
