--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -398,6 +398,20 @@
   "billToEmployee": "Facturar a empleado",
   "dates": "Fechas",
   "addItem": "Agregar ítem",
+  
+  "reports": "Reportes",
+  "report": "Reporte",
+  "myReports": "Mis reportes",
+  "newReport": "Nuevo reporte",
+  "reportDetails": "Detalles del reporte",
+  "selectDateRange": "Selecciona rango de fechas",
+  "startDate": "Fecha inicio",
+  "endDate": "Fecha fin",
+  "generateReport": "Generar reporte",
+  "reportRequested": "Reporte solicitado",
+  "reportGeneratedSuccessfully": "Reporte generado exitosamente",
+  "errorGeneratingReport": "Error al generar el reporte",
+  "invalidDateRange": "Rango de fechas inválido",
   "item": "Ítem",
   "lineTotal": "Total",
   "tax": "Impuesto",
