fix: clean up formatting and whitespace in various files for consistency

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -576,8 +576,7 @@
   "availableOnThe": "Available on",
   "getItOn": "Get it on",
 
-  "ourTeam": "Our Team"
-,
+  "ourTeam": "Our Team",
   "reports": "Reports",
   "report": "Report",
   "myReports": "My Reports",
