feat: implement receipt downloading functionality with error handling and localization support

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -246,6 +246,12 @@
   "imageUploaded": "Image uploaded",
   "errorUploadingImage": "Error uploading image",
   "errorGettingReceiptValues": "Error getting receipt values",
+  "noReceiptImageToDownload": "No receipt image to download",
+  "downloadingReceipt": "Downloading receipt...",
+  "receiptDownloaded": "Receipt downloaded successfully",
+  "receiptSaved": "Receipt saved",
+  "receiptImageOpened": "Receipt image opened",
+  "errorDownloadingReceipt": "Error downloading receipt",
   "compressingPicture": "Compressing picture...",
   "unknownError": "Unknown error, please try again",
   "creating": "Creating...",
