--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -232,6 +232,12 @@
   "imageUploaded": "Imagen subida",
   "errorUploadingImage": "Error al subir la imagen",
   "errorGettingReceiptValues": "Error al obtener los valores del recibo",
+  "noReceiptImageToDownload": "No hay imagen de recibo para descargar",
+  "downloadingReceipt": "Descargando recibo...",
+  "receiptDownloaded": "Recibo descargado exitosamente",
+  "receiptSaved": "Recibo guardado",
+  "receiptImageOpened": "Imagen del recibo abierta",
+  "errorDownloadingReceipt": "Error al descargar el recibo",
   "compressingPicture": "Comprimiendo imagen...",
   "unknownError": "Error desconocido, por favor intenta de nuevo",
   "creating": "Creando...",
