feat: add report generation and retrieval functionality with UI components and localization support

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -595,5 +595,8 @@
   "reportRequested": "Report requested",
   "reportGeneratedSuccessfully": "Report generated successfully",
   "errorGeneratingReport": "Error generating report",
-  "invalidDateRange": "Invalid date range"
+  "invalidDateRange": "Invalid date range",
+  "recentReports": "Recent Reports",
+  "noReportsYet": "No reports yet",
+  "generateFirstReport": "Generate your first report to see it here"
 }
